# treeBar

./: CHANGELOG.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  make_data.py  setup.cfg
.github/workflows/: main.yml
requirements/: py310.txt  py311.txt  py35.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/treepoem/: __init__.py  __main__.py  data.py
src/treepoem/postscriptbarcode/: CHANGES  barcode.ps  barcode_with_sample.ps
tests/: conftest.py  test_main.py  test_treepoem.py
