[metadata]
name = treepoem
version = 3.18.0
description = Barcode rendering for Python supporting QRcode, Aztec, PDF417, I25, Code128, Code39 and many more types.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/adamchainz/treepoem
author = Christian Muirhead
author_email = xtian@babbageclunk.com
maintainer = Adam Johnson
maintainer_email = me@adamj.eu
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed
keywords = barcode bwipp postscript ghostscript qr qrcode aztec azteccode pdf417 interleaved2of5 i25 code128 code39
project_urls =
    Changelog = https://github.com/adamchainz/treepoem/blob/main/HISTORY.rst
    Twitter = https://twitter.com/adamchainz

[options]
packages = find:
install_requires =
    Pillow
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    treepoem=treepoem.__main__:main

[flake8]
max-line-length = 88
extend-ignore = E203
